- Please report any issue!

-----------------------------------------------------------------------
 VERSION 1.92.7 WIP (In Progress)
-----------------------------------------------------------------------

Breaking Changes:

Other Changes:

- Style: border sizes are now scaled (and rounded) by ScaleAllSizes().
- Clipper: clear DisplayStart/DisplayEnd fields when Step() returns false.


-----------------------------------------------------------------------
 VERSION 1.92.6 (2026-02-17)
-----------------------------------------------------------------------

Decorated log and release notes: https://github.com/ocornut/imgui/releases/tag/v1.92.6

Breaking Changes:

- Fonts:
  - `AddFontDefault()` now automatically selects an embedded font between:
    - `AddFontDefaultBitmap()`: classic pixel-clean font. Recommended at Size 13px with no scaling.
    - `AddFontDefaultVector()`: new scalable font. Recommended at any higher size.
    - The default selection is based on (style.FontSizeBase * FontScaleMain * FontScaleDpi)
      reaching a small threshold, but old codebases may not set any of them properly.
      As as a result, it is likely that old codebase may still default to AddFontDefaultBitmap().
    - Prefer explicitly calling either of them based on your own logic!
      You can call `AddFontDefaultBitmap()` to ensure legacy behavior.
  - Fixed handling of `ImFontConfig::FontDataOwnedByAtlas = false` which did
    erroneously make a copy of the font data, essentially defeating the purpose
    of this flag and wasting memory (undetected since July 2015 and now spotted
    by @TellowKrinkle, this is perhaps the oldest bug in Dear ImGui history,
    albeit for a rarely used feature!) (#9086, #8465)
    HOWEVER, fixing this bug is likely to surface bugs in user/app code:
    - Prior to 1.92, font data only needs to be available during the `atlas->AddFontXXX()` call.
      Since 1.92, font data needs to available until `atlas->RemoveFont()`, or more typically